# web-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AI_COLLABORATION_GUIDE.md  ANALYTICS_DASHBOARD_README.md  ANALYTICS_SYSTEM_SUCCESS_REPORT.md  AUGMENT_CODE_SPECIFICATIONS.md  AURA FRONTEND ERRORS.md  AURA_FRONTEND_HANDOFF.md  CI_CD_DEPENDENCY_FIX.md  CI_CD_FIXES_SUMMARY.md  CLAUDE_CODE_HANDOFF.md  CODEBASE_INDEX.md  CODING_STANDARDS.md  COMMIT_SUMMARY_ENHANCED_ANALYTICS_LANDING.md  DEVELOPMENT_LOG.md  E2E_TESTING_IMPLEMENTATION.md  ENTERPRISE_RBAC_ABAC_IMPLEMENTATION.md  ENTERPRISE_SECURITY_ARCHITECTURE.md  ENTERPRISE_SECURITY_IMPLEMENTATION.md  GITHUB_ACTIONS_FIXES.md  MOCK_DATA_REMOVAL_GUIDE.md  NODEJS_CACHE_FIX.md  PHASE_2A_COMPLETION_SUMMARY.md  PHASE_2B_IMPLEMENTATION_SPEC.md  PHASE_2B_VALIDATION_REPORT.md  PHASE_2C_IMPLEMENTATION_SPEC.md  PHASE_2D_COMPLETION_SUMMARY.md  PRE_COMMIT_SETUP.md  PRE_DEPLOYMENT_CHECKLIST.md  README.md  SECURITY.md  SECURITY_ARCHITECTURE_OVERVIEW.md  SECURITY_IMPROVEMENTS.md  VALIDATION_COMMANDS.md  VALIDATION_REPORT.md  ZERO_TRUST_SIEM_COMPLETION_SUMMARY.md  ZERO_TRUST_SIEM_IMPLEMENTATION.md  bandit-report.json  (+54 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  e2e-critical-tests.yml  e2e-tests.yml
alembic/: env.py
alembic/versions/: 002_background_tasks.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: analytics.py  auth.py  enterprise.py  execute.py  execution_plans.py  plans.py  security.py  tasks.py  users.py  web_pages.py  webhooks.py
app/compliance/: soc2_framework.py
app/core/: config.py  http_client.py  logging.py  security.py  zero_knowledge.py
app/db/: base.py  init_db.py  session.py
app/executors/: browser_actions.py
app/langchain/: __init__.py
app/langchain/agents/: __init__.py  planning_agent.py
app/langchain/memory/: __init__.py  planning_memory.py
app/langchain/prompts/: __init__.py  planning_prompts.py
app/langchain/tools/: __init__.py  base_tool.py  webpage_tools.py
app/langchain/validation/: __init__.py  plan_validator.py
app/models/: __init__.py  browser_session.py  execution_plan.py  interactive_element.py  security.py  task.py  task_execution.py  user.py  web_page.py
app/schemas/: __init__.py  analytics.py  enterprise.py  execution.py  execution_plan.py  planning.py  task.py  user.py  web_page.py  webhook.py
app/security/: cloud_security.py  constant_time_crypto.py  crypto_rate_limiter.py  dependency_scanner.py  hsm_integration.py  incident_response.py  input_sanitization.py  rbac_engine.py  security_headers.py  session_manager.py  siem_integration.py  sso_integration.py  token_blacklist.py  zero_trust.py
app/services/: abac_service.py  action_executor.py  analytics_service.py  billing_service.py  planning_service.py  rbac_service.py  sso_service.py  subscription_service.py  task_service.py  task_status_service.py  tenant_service.py  user_service.py  web_parser.py  webhook_service.py  webpage_cache_service.py
app/utils/: browser_pool.py
aura/: .env.example  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
aura/.github/workflows/: ci.yml
aura/public/: _headers
aura/src/: App.tsx  index.css
aura/src/components/: Dashboard.tsx  EnhancedDashboard.tsx  Navigation.tsx  UnifiedDashboard.tsx  index.ts
aura/src/components/analytics/: AnalyticsDashboard.tsx  MetricsVisualization.tsx  PricingComparison.tsx  SavingsCalculator.tsx  UpgradeOpportunities.tsx  index.ts
aura/src/components/auth/: DemoLoginPanel.tsx  LoginForm.tsx  RegisterForm.tsx
aura/src/components/billing/: BillingDashboard.tsx  index.ts
aura/src/components/dashboard/: FeatureLockOverlay.tsx  HeaderBar.tsx  ReaderHub.tsx  UsageCounter.tsx  index.ts
aura/src/components/enterprise/: TenantManagement.tsx
aura/src/components/security/: TrustScoreIndicator.tsx
aura/src/contexts/: AuthContext.tsx
aura/src/pages/: AnalyticsPage.tsx
aura/src/services/: analyticsService.ts  apiService.ts  cryptoService.ts  demoService.ts  index.ts
aura/src/types/: index.ts  pricing.ts
docker/dev/: Dockerfile
docs/: README.md
docs/architecture/: ai-planning-service.md  background-task-processing.md  system-overview.md
scripts/: run_e2e_tests.sh  test_enterprise_system.py
tests/: E2E_TESTING_README.md  conftest.py  e2e_comprehensive_runner.py  e2e_config.json  e2e_test_runner.py  run_critical_e2e_tests.py  test_enterprise_integration.py
tests/automation/: test_ci_cd_integration.py
tests/e2e/: test_agent_execution_critical.py  test_agent_execution_flow.py  test_analytics_reporting.py  test_authentication_security.py  test_chaos_engineering.py  test_enterprise_security.py  test_multi_tenant_operations.py  test_performance_load.py  test_performance_load_critical.py  test_security_compliance_critical.py  test_security_penetration.py  test_subscription_billing.py  test_subscription_billing_critical.py
tests/unit/: test_basic.py  test_config.py
webagent-landing/: LAUNCH_CHECKLIST.md  README.md  deploy.sh  package.json  tailwind.config.js  vercel.json
webagent-landing/app/: globals.css  layout.tsx  page.tsx
webagent-landing/public/: robots.txt  site.webmanifest  sitemap.xml
